--- a/index.html
+++ b/index.html
@@ -113,15 +113,17 @@
             </div>
         </nav>
 <p>Служба доставки: +7 (705) 148-98-83</p>
-    <div class="cafe-images">
-        <img src="f/71.png" alt="Cafe Image 1">
-        <img src="f/72.png" alt="Cafe Image 2">
-        <img src="f/73.png" alt="Cafe Image 3">
-        <img src="f/74.png" alt="Cafe Image 4">
-        <img src="f/75.png" alt="Cafe Image 5">
-        <img src="f/76.png" alt="Cafe Image 6">
-        <img src="f/77.png" alt="Cafe Image 7">
-        <img src="f/78.png" alt="Cafe Image 8">
+   <div class="image-container">
+    <div class="image-item"><img src="f/71.png" alt="Image 71"></div>
+    <div class="image-item"><img src="f/72.png" alt="Image 72"></div>
+    <div class="image-item"><img src="f/73.png" alt="Image 73"></div>
+    <div class="image-container">
+    <div class="image-item"><img src="f/74.png" alt="Image 74"></div>
+    <div class="image-item"><img src="f/75.png" alt="Image 75"></div>
+    <div class="image-item"><img src="f/76.png" alt="Image 76"></div>
+    <!-- Добавьте остальные фотографии здесь -->
+</div>
+
     </div>
 </header>
 <main>    
